# Apelsins

seminar-1/: CMakeLists.txt  Readme.md
seminar-1/src/: main.cpp
seminar-1/tests/: test_sub.cpp
seminar-2/: Readme.md
seminar-3/: CMakeLists.txt  Readme.md
seminar-3/include/: input_and_print.h  logic.h
seminar-3/src/: input_and_print.cpp  logic.cpp  main.cpp
seminar-3/tests/: test_count_infected.cpp  test_neighbour_vir.cpp  test_step.cpp
seminar-4/: CMakeLists.txt  Readme.md
seminar-4/data/: input.cav  output.csv
seminar-4/include/: read_and_parse.h  statistics.h  write_statistics_csv.h
seminar-4/src/: main.cpp  read_and_parse.cpp  statistics.cpp  write_statistics_csv.cpp
seminar-5/: CMakeLists.txt
seminar-5/include/: notes.h  print_note.h  statistics.h
seminar-5/src/: main.cpp  print_note.cpp  statistics.cpp  work_with_notes.cpp
seminar-6/: CMakeLists.txt
seminar-6/include/: comparators.h  safe_vector.h  transaction.h
seminar-6/src/: main.cpp  safe_vector.cpp  transaction.cpp
seminar-7/: CMakeLists.txt
seminar-7/include/: audiotrack.h  mediafile.h  playlist.h  podcast_episode.h  videoclip.h
seminar-7/src/: audiotrack.cpp  main.cpp  playlist.cpp  podcast_episode.cpp  videoclip.cpp
seminar-8/: CMakeLists.txt
seminar-8/include/: bankaccount.h  checkingaccount.h  currency.h  exceptions.h  savingsaccount.h  transaction.h  transfer_utils.h
seminar-8/src/: bankaccount.cpp  checkingaccount.cpp  currency.cpp  main.cpp  savingsaccount.cpp  transaction.cpp  transfer_utils.cpp
